--- a/package/src/views/public/landing-page/landing-page.css
+++ b/package/src/views/public/landing-page/landing-page.css
@@ -58,6 +58,9 @@ img {
 .product-image {
   border: 1px solid #ccc;
   border-radius: 20px;
+  width: 200px;
+  height: 150px;
+  margin: 0 auto;
 }
 
 body {
